@@ -1,3 +1,11 @@
+2004-10-31  Jost Boekemeier  <jostb@intern>
+
+	* server/natcJavaBridge.c 
+	(Java_JavaBridge_startNative): Removed debug code.
+	(Java_JavaBridge_handleRequests): Cleanup.
+
+	* php-java-bridge 1.0.6 released.
+
 2004-10-30  Boekemeier  <jost2345@intern>
 
 	* server/natJavaBridge.c (java_bridge_main_gcj): Correct typo.
